--- a/src/views/MagusAcademySite.html
+++ b/src/views/MagusAcademySite.html
@@ -1,6 +1,11 @@
 <!DOCTYPE HTML>
 <html>
+<body background= "/content/ProfessorMagusChannelArt.png" height="1280px">
 <head>
 <title>Magus Academy Official Page</title>
     </head>
+<body>
+    <h1><font color="blue">Welcome to the Official Magus Academy Site, home of Professor Magus and his students!</font></h1>
+<img src="/content/DarkMagus.jpg" alt="Dark Magus" height="140px">
+</body>
 </html>
